# SQL-lineage-visualizationV1

./: .gitignore  LICENSE  README.md  opencode.json  opencode.json.bak-20260607  opencode_C09_C10_prompt.md  最终目标.md
.codegraph/: daemon.pid
backend/: debug_tree.py  requirements.txt
c09_c10_design_core_code/: README.md
complex_sql_handling_package/complex_sql_handling_package/: README.md  TEST_RESULT.md  pyproject.toml
complex_sql_handling_package/complex_sql_handling_package/docs/: 01_complex_sql_architecture.md  02_development_plan.md  03_api_contract.md  04_golden_case_strategy.md  05_agent_implementation_prompt.md
complex_sql_handling_package/complex_sql_handling_package/golden_cases/dirty_regex_template_001/: README.md  expected.complex_sql_result.json  input.sql  metadata.json
complex_sql_handling_package/complex_sql_handling_package/golden_cases/lateral_view_explode_001/: README.md  expected.complex_sql_result.json  input.sql  metadata.json
complex_sql_handling_package/complex_sql_handling_package/scripts/: run_demo.py
complex_sql_handling_package/complex_sql_handling_package/src/complex_sql_guard/: __init__.py  analyzer.py  dialect.py  models.py  parser_adapter.py  preflight.py  segmenter.py  shields.py
complex_sql_handling_package/complex_sql_handling_package/tests/: test_analyzer.py  test_segmenter.py  test_shields.py
data/: lineage.db
docs/: 00_调整说明与变更记录.md  01_总路线图_Python初学者版.md  02_迭代总表_后端能力与前端效果.md  03_后端最小契约_AnalysisResult稳定版.md  04_前端对接总规范.md  06_给OpenCode的分阶段提示词.md  07_验收用SQL_Golden_Cases.md  08_当前缺陷与待修复清单.md  09_复杂SQL容错开发记录.md  (+6 more)
(+376 files in other folders)
